Add plan for analysis

--- a/Purchase Prediction - YT.ipynb
+++ b/Purchase Prediction - YT.ipynb
@@ -4,50 +4,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Intuition\n",
+    "\n",
+    "We can have 2 kinds of predictions:\n",
+    "\n",
+    "* Given that the customer has not bought before, \n",
+    "    * Can we use their demographics to determine:\n",
+    "        * How much (dollar amount) they will buy?\n",
+    "        * How many items they will buy?\n",
+    "        * What categories they will buy?\n",
+    "* Given that the customer has made a purchase, \n",
+    "    * Can we see if their demographics, purchase history and purchase experience determine the likelihood of them returning?\n",
+    "        * Compare the non-last transactions of repeat customers against transactions by single-time customers\n",
+    "    * Can we compare past purchases to future ones? \n",
+    "        * E.g. to see if big spenders always spend big for all purchases. \n",
+    "          Or those that buy from a certain category will continue to buy from that category. \n",
+    "    * Can we segment customers based on their purchase history? \n",
+    "        * Can also explore if particular segments have higher chance of returning customers. \n",
+    "    \n",
+    "Can we segment customers based on what they purchase? E.g.:\n",
+    "* Those that purchase huge range of products\n",
+    "* Those that purchase only 1 item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-21T07:15:02.862242Z",
+     "start_time": "2019-04-21T07:15:02.853262Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['customer_id', 'customer_unique_id', 'customer_zip_code_prefix',\n",
+       "       'customer_city', 'customer_state'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customers.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Import Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T06:24:39.722338Z",
-     "start_time": "2019-04-20T06:24:39.719318Z"
+     "end_time": "2019-04-21T05:55:13.909424Z",
+     "start_time": "2019-04-21T05:55:12.831851Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\leeye\\Anaconda3\\lib\\site-packages\\pandas_profiling\\plot.py:15: UserWarning: matplotlib.pyplot as already been imported, this call will have no effect.\n",
+      "  matplotlib.use(BACKEND)\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import seaborn as sns\n",
-    "sns.set(rc={'figure.figsize':(14, 6)})\n",
+    "import statsmodels.api as sm\n",
+    "from pandas_profiling import ProfileReport\n",
+    "from tabulate import tabulate\n",
     "\n",
-    "from tabulate import tabulate"
+    "sns.set(rc={'figure.figsize':(14, 6)})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T08:56:32.521081Z",
-     "start_time": "2019-04-20T08:56:32.518096Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from pandas_profiling import ProfileReport"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-04-20T05:30:27.165758Z",
-     "start_time": "2019-04-20T05:30:26.263035Z"
+     "end_time": "2019-04-21T05:55:18.052851Z",
+     "start_time": "2019-04-21T05:55:15.776584Z"
     }
    },
    "outputs": [],
@@ -70,11 +121,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 60,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T05:30:28.312017Z",
-     "start_time": "2019-04-20T05:30:28.272026Z"
+     "end_time": "2019-04-21T06:17:06.926706Z",
+     "start_time": "2019-04-21T06:17:06.849817Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "orders['time_to_approve'] = (orders.order_approved_at - orders.order_purchase_timestamp).dt.total_seconds()\n",
+    "orders['time_to_ship'] = (orders.order_delivered_carrier_date - orders.order_approved_at).dt.total_seconds()\n",
+    "orders['time_to_reach'] = (orders.order_delivered_customer_date - orders.order_delivered_carrier_date).dt.total_seconds()\n",
+    "orders['days_delivery_diff'] = (orders.order_estimated_delivery_date - orders.order_delivered_customer_date).dt.days\n",
+    "orders['month_purchase'] = orders.order_purchase_timestamp.dt.month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-21T05:55:24.310712Z",
+     "start_time": "2019-04-21T05:55:24.198460Z"
     },
     "scrolled": true
    },
@@ -86,11 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T05:30:30.674752Z",
-     "start_time": "2019-04-20T05:30:30.448256Z"
+     "end_time": "2019-04-21T05:55:27.022363Z",
+     "start_time": "2019-04-21T05:55:26.529344Z"
     }
    },
    "outputs": [],
@@ -103,11 +172,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T05:30:31.659735Z",
-     "start_time": "2019-04-20T05:30:31.555855Z"
+     "end_time": "2019-04-21T05:55:32.657418Z",
+     "start_time": "2019-04-21T05:55:32.327995Z"
     }
    },
    "outputs": [],
@@ -125,11 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T05:30:32.690383Z",
-     "start_time": "2019-04-20T05:30:32.508994Z"
+     "end_time": "2019-04-21T05:55:35.649415Z",
+     "start_time": "2019-04-21T05:55:35.286143Z"
     }
    },
    "outputs": [],
@@ -6860,59 +6929,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T09:14:31.896932Z",
-     "start_time": "2019-04-20T09:14:30.954519Z"
+     "end_time": "2019-04-21T06:09:29.020506Z",
+     "start_time": "2019-04-21T06:09:29.016414Z"
     }
    },
    "outputs": [],
    "source": [
-    "import statsmodels.api as sm"
+    "from sklearn.metrics import precision_score, recall_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 74,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T09:07:21.723770Z",
-     "start_time": "2019-04-20T09:07:21.718810Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['order_status', 'order_purchase_timestamp', 'order_approved_at',\n",
-       "       'order_delivered_carrier_date', 'order_delivered_customer_date',\n",
-       "       'order_estimated_delivery_date', 'customer_unique_id',\n",
-       "       'customer_zip_code_prefix', 'customer_city', 'customer_state',\n",
-       "       'repeat_customer', 'num_items', 'price_sum', 'price_mean',\n",
-       "       'freight_value_sum', 'freight_value_mean', 'product_id_nunique',\n",
-       "       'seller_id_nunique', 'num_reviews', 'avg_review', 'time_to_approve',\n",
-       "       'time_to_ship', 'time_to_reach', 'days_delivery_diff', 'month_purchase',\n",
-       "       'time_to_approve_bins'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 256,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "orders.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 320,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-04-20T09:31:33.266904Z",
-     "start_time": "2019-04-20T09:31:33.220864Z"
+     "end_time": "2019-04-21T06:22:37.369022Z",
+     "start_time": "2019-04-21T06:22:37.228779Z"
     }
    },
    "outputs": [],
@@ -6927,7 +6962,7 @@
     "columns = ['repeat_customer', 'num_items', \n",
     "            'price_sum', 'freight_value_mean', 'product_id_nunique', 'num_reviews', \n",
     "            'avg_review', 'time_to_approve', 'time_to_ship', 'time_to_reach', \n",
-    "            'days_delivery_diff'\n",
+    "            'days_delivery_diff', 'month_purchase'\n",
     "           ]\n",
     "\n",
     "X = orders[columns]\n",
@@ -6935,60 +6970,94 @@
     "X = pd.get_dummies(X)\n",
     "X['time_to_approve'] = np.log(X['time_to_approve']+1)\n",
     "X.dropna(inplace=True)\n",
-    "y = X.repeat_customer\n",
-    "X.drop('repeat_customer', inplace=True, axis=1)"
+    "y = X.repeat_customer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 75,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-20T09:31:34.955494Z",
-     "start_time": "2019-04-20T09:31:34.805384Z"
+     "end_time": "2019-04-21T06:22:39.003673Z",
+     "start_time": "2019-04-21T06:22:38.535141Z"
     },
     "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\leeye\\Anaconda3\\lib\\site-packages\\numpy\\core\\fromnumeric.py:2223: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
+      "  return ptp(axis=axis, out=out, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.223643\n",
+      "         Iterations 7\n",
+      "0.84673\n",
+      "0.07429\n"
+     ]
+    }
+   ],
+   "source": [
+    "X2 = sm.add_constant(X.drop('repeat_customer', axis=1))\n",
+    "est = sm.Logit(y, X2)\n",
+    "est2 = est.fit()\n",
+    "pred_y = est2.predict(X2)\n",
+    "# est2.summary()\n",
+    "\n",
+    "print(\"%.5f\" % precision_score(y, round(pred_y)))\n",
+    "print(\"%.5f\" % recall_score(y, round(pred_y)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-21T06:27:26.116140Z",
+     "start_time": "2019-04-21T06:27:25.555573Z"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimization terminated successfully.\n",
-      "         Current function value: 0.223645\n",
-      "         Iterations 7\n",
-      "                           Logit Regression Results                           \n",
-      "==============================================================================\n",
-      "Dep. Variable:        repeat_customer   No. Observations:                96461\n",
-      "Model:                          Logit   Df Residuals:                    96450\n",
-      "Method:                           MLE   Df Model:                           10\n",
-      "Date:                Sat, 20 Apr 2019   Pseudo R-squ.:                 0.05126\n",
-      "Time:                        17:31:34   Log-Likelihood:                -21573.\n",
-      "converged:                       True   LL-Null:                       -22739.\n",
-      "                                        LLR p-value:                     0.000\n",
-      "======================================================================================\n",
-      "                         coef    std err          z      P>|z|      [0.025      0.975]\n",
-      "--------------------------------------------------------------------------------------\n",
-      "const                 -7.8570      0.157    -50.000      0.000      -8.165      -7.549\n",
-      "num_items              0.1609      0.023      7.037      0.000       0.116       0.206\n",
-      "price_sum             -0.0004   9.45e-05     -4.440      0.000      -0.001      -0.000\n",
-      "freight_value_mean    -0.0038      0.001     -3.198      0.001      -0.006      -0.001\n",
-      "product_id_nunique     0.2935      0.050      5.843      0.000       0.195       0.392\n",
-      "num_reviews            4.4781      0.122     36.570      0.000       4.238       4.718\n",
-      "avg_review             0.0422      0.012      3.629      0.000       0.019       0.065\n",
-      "time_to_approve       -0.0142      0.006     -2.422      0.015      -0.026      -0.003\n",
-      "time_to_ship        2.058e-07   4.46e-08      4.615      0.000    1.18e-07    2.93e-07\n",
-      "time_to_reach       3.753e-08   2.51e-08      1.497      0.134   -1.16e-08    8.67e-08\n",
-      "days_delivery_diff     0.0090      0.002      5.262      0.000       0.006       0.012\n",
-      "======================================================================================\n"
+      "0.84524\n",
+      "0.07313\n"
      ]
     }
    ],
    "source": [
-    "X2 = sm.add_constant(X)\n",
-    "est = sm.Logit(y, X2)\n",
-    "est2 = est.fit()\n",
-    "print(est2.summary())"
+    "precision = 0\n",
+    "recall = 0\n",
+    "\n",
+    "for month in range(1, 13):\n",
+    "    subset = X[X.month_purchase == month].drop('month_purchase', axis=1)\n",
+    "    X2 = sm.add_constant(subset.drop('repeat_customer', axis=1))\n",
+    "    est = sm.Logit(subset.repeat_customer, X2)\n",
+    "    est2 = est.fit(disp=0)\n",
+    "    pred_y = est2.predict(X2)\n",
+    "    precision += precision_score(subset.repeat_customer, round(pred_y)) * subset.shape[0] / X.shape[0]\n",
+    "    recall += recall_score(subset.repeat_customer, round(pred_y)) * subset.shape[0] / X.shape[0]\n",
+    "    \n",
+    "print(\"%.5f\" % precision)\n",
+    "print(\"%.5f\" % recall)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Description | Precision | Recall |\n",
+    "| ----------- | --------- | ------ |\n",
+    "| Without months | 0.84673 | 0.07429 |\n"
    ]
   },
   {
@@ -7063,23 +7132,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-04-20T05:53:52.693234Z",
-     "start_time": "2019-04-20T05:53:52.678145Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "orders['time_to_approve'] = (orders.order_approved_at - orders.order_purchase_timestamp).dt.total_seconds()\n",
-    "orders['time_to_ship'] = (orders.order_delivered_carrier_date - orders.order_approved_at).dt.total_seconds()\n",
-    "orders['time_to_reach'] = (orders.order_delivered_customer_date - orders.order_delivered_carrier_date).dt.total_seconds()\n",
-    "orders['days_delivery_diff'] = (orders.order_estimated_delivery_date - orders.order_delivered_customer_date).dt.days"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 181,
    "metadata": {
     "ExecuteTime": {
@@ -7101,20 +7153,6 @@
    ],
    "source": [
     "orders.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-04-20T05:54:42.364295Z",
-     "start_time": "2019-04-20T05:54:42.355320Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "orders['month_purchase'] = orders.order_purchase_timestamp.dt.month"
    ]
   },
   {
@@ -7661,7 +7699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   },
   "toc": {
    "base_numbering": 1,
